# eindfissaa

./: pyproject.toml
src/zonnecel/: GUI.py  controller.py  mainwindow.ui  model.py  test.csv  ui_mainwindow.py  view.py
